Fixes for alignment and consistency on PK_test page

--- a/css/new-age-plus.css
+++ b/css/new-age-plus.css
@@ -6,6 +6,15 @@
  *  Author     : Neueda
  */
 
+/* Theme overrides */
+
+.btn-outline {
+    background-color: #888889;
+    border-color: #ffffff;
+}
+
+/* End of theme overrides */
+
 .chart
 {
     background-color:#fff;
